@@ -85,6 +85,7 @@ $_LANG['Add:'] = 'Dodaj:';
 $_LANG['Add group:'] = 'Dodaj grupę:';
 $_LANG['Add group'] = 'Dodaj grupę';
 $_LANG['Add customer to group'] = 'Dodaj klienta do grupy';
+$_LANG['Add customer to groups'] = 'Dodaj klienta do grup';
 $_LANG['Add Event'] = 'Dodaj zdarzenie';
 $_LANG['Add host'] = 'Dodaj hosta';
 $_LANG['Add instance'] = 'Dodaj instancję';
@@ -177,6 +178,7 @@ $_LANG['Are you sure, you want to readdress network $a to network $b ?'] = 'Jest
 $_LANG['Are you sure, you want to recover database created at $a?'] = 'Czy jesteś pewien, że chcesz odtworzyć bazę danych z kopii stworzonej $a?';
 $_LANG['Are you sure, you want to remove customer \\\'$a\\\' from database?\\n\\nIf that customer have some nodes, they will be also removed and data definitely lost!'] = 'Jesteś pewien, że chcesz usunąć klienta \\\'$a\\\' z bazy danych?\\n\\nJeżeli klient posiada jakieś komputery zostaną one również usunięte, a ich dane bezpowrotnie utracone!';
 $_LANG['Are you sure, you want to remove customer from group?'] = 'Jesteś pewien, że chcesz usunąć klienta z grupy?';
+$_LANG['Are you sure, you want to remove customer from selected groups?'] = 'Jesteś pewien, że chcesz usunąć klienta z wybranych grup?';
 $_LANG['Are you sure, you want to remove device \\\'$a\\\' from database?'] = 'Jesteś pewien, że chcesz usunąć urządzenie \\\'$a\\\' z bazy danych?';
 $_LANG['Are you sure, you want to remove host \\\'$a\\\' and all assigned configuration?'] = 'Jesteś pewien, że chcesz usunąć hosta \\\'$a\\\' i całą jego konfigurację?';
 $_LANG['Are you sure, you want to remove instance \\\'$a\\\' and all assigned configuration?'] = 'Jesteś pewien, że chcesz usunąć instancję \\\'$a\\\' i całą jej konfigurację?';
@@ -1264,6 +1266,7 @@ $_LANG['- select filter category -'] = '- wybierz kategorię filtrowania -';
 $_LANG['Select from list device for connection'] = 'Z listy wybierz urządzenie do podłączenia';
 $_LANG['Select from list device for replacement'] = 'Z listy wybierz urządzenie do wymiany';
 $_LANG['... select group ...'] = '... wybierz grupę ...';
+$_LANG['... select groups ...'] = '... wybierz grupy ...';
 $_LANG['Select group'] = 'Wybierz grupę';
 $_LANG['Select group to attribute to customer'] = 'Wybierz grupę, którą chcesz przypisać klientowi';
 $_LANG['- select host -'] = '- wybierz host -';
