@@ -163,7 +163,7 @@
 								<A href="?m=note&amp;id={$item.docid}" class="docnumber" data-resourceid="{$item.docid}" rel="external"><IMG src="img/printd.gif" alt="[ {trans("Debit note")} ]"></A>
 							{/if}
 						{/if}
-						<INPUT type="checkbox" NAME="marks[{$item.id}]" value="{$item.id}">
+						<INPUT type="checkbox" NAME="marks[{$item.id}]" value="{$item.id}" class="multi-check">
 					</TD>
 				</TR>
 				{sectionelse}
@@ -188,9 +188,23 @@
 							<INPUT type="checkbox" name="original" id="inv-original"{if preg_match('/original/i', $default_printpage)} checked{/if}> <label for="inv-original">{trans("original")}</label>
 							<INPUT type="checkbox" name="copy" id="inv-copy"{if preg_match('/copy/i', $default_printpage)} checked{/if}> <label for="inv-copy">{trans("copy")}</label>
 							<INPUT type="checkbox" name="duplicate" id="inv-duplicate"{if preg_match('/duplicate/i', $default_printpage)} checked{/if}> <label for="inv-duplicate">{trans("duplicate")}</label>
-							</TD><TD style="width: 1%;" class="text-right nobr">
-							<label for="allboxb">{trans("Check All")}</label><INPUT type="checkbox" NAME="allbox" id="allboxb" onchange="CheckAll('addbalance', this, ['copy', 'original', 'duplicate'])" value="1">
-							</TD></TR>
+							</TD>
+								<TD style="width: 1%;" class="text-right nobr">
+									<label>
+										{trans("Check All")}
+										<INPUT type="checkbox" id="customerbalancebox-checkall">
+									</label>
+								</TD>
+							</TR>
+							<script type="text/javascript">
+							<!--
+								$(function() {
+									$('#customerbalancebox-checkall').on("change", function() {
+										CheckAll('addbalance', this, ['copy', 'original', 'duplicate'])
+									});
+								});
+							//-->
+							</script>
 						</TABLE>
 					</TD>
 				</TR>
