@@ -157,7 +157,7 @@
 				<img src="img/asc_order.gif">
 			</a>
 			{/if}
-			<INPUT TYPE="checkbox" NAME="marks[{$docid}]" VALUE="{$docid}"{if $marks.$docid}CHECKED{/if}>
+			<INPUT TYPE="checkbox" NAME="marks[{$docid}]" VALUE="{$docid}" class="multi-check"{if $marks.$docid} checked{/if}>
 			<div id="allattachments-{$doc.docid}" style="display: none;">
 				{foreach $doc.attachments as $docattach}
 				{if $docattach@first && $docattach.main}{continue}{/if}
