@@ -91,6 +91,7 @@ version ?.??.?? (????-??-??):
   - defined html class multi-check which allows tbodies function with multi
     select elements on lists [chilan]
   - support of multi message deletions [chilan]
+  - multi customer group assignments can be added and deleted from customer form [chilan]
 
 version 1.11.20 (2016-04-19):
 
